made endpoints and responses equal now
